fixes visiblity issue on reusme page

--- a/portfolio/src/Components/PageViews/Resume/resume.css
+++ b/portfolio/src/Components/PageViews/Resume/resume.css
@@ -12,8 +12,15 @@ iframe {
   width: 50%;
 }
 .mobile-resume {
- display: hidden
+ width:0vw ;
+ height:0vw ;
 }
+
+.mobile-resume {
+  width:0vw ;
+  height:0vw ;
+  visibility: hidden;
+ }
 
 @media only screen and (min-device-width: 200px) and (max-device-width: 600px) {
   iframe {
@@ -28,6 +35,7 @@ iframe {
   }
  
   .mobile-resume Button{
+    visibility: visible;
     height: 15vh;
     width:60vw;
     margin-top:10%;
